@@ -102,7 +102,7 @@ public class NodesTest {
         TestUtil.testResult(db, "MATCH (m1:Start) WITH collect(m1) as nodes CALL apoc.nodes.cycles(nodes) YIELD path RETURN path", res -> {
             List<Path> paths = Iterators.stream(res.<Path>columnAs("path"))
                     .sorted(Comparator.comparingLong(item -> (long) item.lastRelationship().getProperty("id")))
-                    .collect(Collectors.toList());
+                    .toList();
             assertEquals(5, paths.size());
             assertionsCycle(paths.get(0), FIRST_ALPHA_CYCLE_PROPS);
             assertionsCycle(paths.get(1), SECOND_ALPHA_CYCLE_PROPS);
@@ -122,7 +122,7 @@ public class NodesTest {
                 res -> {
             List<Path> paths = Iterators.stream(res.<Path>columnAs("path"))
                     .sorted(Comparator.comparingLong(item -> (long) item.lastRelationship().getProperty("id")))
-                    .collect(Collectors.toList());
+                    .toList();
             assertEquals(3, paths.size());
             assertionsCycle(paths.get(0), FIRST_ALPHA_CYCLE_PROPS, DEPEND_ON_REL_TYPE);
             assertionsCycle(paths.get(1), SECOND_ALPHA_CYCLE_PROPS, DEPEND_ON_REL_TYPE);
@@ -135,7 +135,7 @@ public class NodesTest {
                 res -> {
             List<Path> paths = Iterators.stream(res.<Path>columnAs("path"))
                     .sorted(Comparator.comparingLong(item -> (long) item.lastRelationship().getProperty("id")))
-                    .collect(Collectors.toList());
+                    .toList();
             assertEquals(3, paths.size());
             assertionsCycle(paths.get(0), FIRST_ALPHA_CYCLE_PROPS);
             assertionsCycle(paths.get(1), SECOND_ALPHA_CYCLE_PROPS);
@@ -148,7 +148,7 @@ public class NodesTest {
                 res -> {
             List<Path> paths = Iterators.stream(res.<Path>columnAs("path"))
                     .sorted(Comparator.comparingLong(item -> (long) item.lastRelationship().getProperty("id")))
-                    .collect(Collectors.toList());
+                    .toList();
             assertEquals(4, paths.size());
             assertionsCycle(paths.get(0), FIRST_ALPHA_CYCLE_PROPS);
             assertionsCycle(paths.get(1), SECOND_ALPHA_CYCLE_PROPS);
@@ -171,7 +171,7 @@ public class NodesTest {
                 res -> {
             List<Path> paths = Iterators.stream(res.<Path>columnAs("path"))
                     .sorted(Comparator.comparingLong(item -> (long) item.lastRelationship().getProperty("id")))
-                    .collect(Collectors.toList());
+                    .toList();
             assertEquals(2, paths.size());
             assertionsCycle(paths.get(0), SELF_REL_PROPS);
             assertionsCycle(paths.get(1), ONE_STEP_PROPS);
@@ -187,11 +187,12 @@ public class NodesTest {
         db.executeTransactionally("MATCH (n) DETACH DELETE n");
         
         // node with 2 'DEPENDS_ON' cycles and 1 mixed-rel-type cycle
-        db.executeTransactionally("CREATE (m1:Start {bar: 'alpha'}) with m1\n" +
-                "CREATE (m1)-[:DEPENDS_ON {id: 0}]->(m2:Module {bar: 'one'})-[:DEPENDS_ON {id: 1}]->(m3:Module {bar: 'two'})-[:DEPENDS_ON {id: 2}]->(m1) \n" +
-                "WITH m1, m2, m3 \n" +
-                "CREATE (m1)-[:DEPENDS_ON {id: 3}]->(m2), (m2)-[:ANOTHER {id: 4}]->(m3), (m2)-[:DEPENDS_ON {id: 5}]->(m3)\n" +
-                "CREATE (m1)-[:DEPENDS_ON {id: 6}]->(:Module {bar: 'seven'})-[:DEPENDS_ON {id: 7}]->(:Module {bar: 'eight'})-[:DEPENDS_ON {id: 8}]->(m1)");
+        db.executeTransactionally("""
+                CREATE (m1:Start {bar: 'alpha'}) with m1
+                CREATE (m1)-[:DEPENDS_ON {id: 0}]->(m2:Module {bar: 'one'})-[:DEPENDS_ON {id: 1}]->(m3:Module {bar: 'two'})-[:DEPENDS_ON {id: 2}]->(m1)
+                WITH m1, m2, m3
+                CREATE (m1)-[:DEPENDS_ON {id: 3}]->(m2), (m2)-[:ANOTHER {id: 4}]->(m3), (m2)-[:DEPENDS_ON {id: 5}]->(m3)
+                CREATE (m1)-[:DEPENDS_ON {id: 6}]->(:Module {bar: 'seven'})-[:DEPENDS_ON {id: 7}]->(:Module {bar: 'eight'})-[:DEPENDS_ON {id: 8}]->(m1)""");
 
         // node with 1 mixed-rel-type cycle
         db.executeTransactionally("CREATE (m1:Start {bar: 'beta'}) with m1\n" +
@@ -262,7 +263,7 @@ public class NodesTest {
         TestUtil.testCall(db, "MATCH (n:Foo) RETURN apoc.node.relationship.types(n,'X') AS value", (r) -> assertEquals(asList("X"), r.get("value")));
         TestUtil.testCall(db, "MATCH (n:Foo) RETURN apoc.node.relationship.types(n,'X|Z') AS value", (r) -> assertEquals(asList("X"), r.get("value")));
         TestUtil.testCall(db, "MATCH (n:Bar) RETURN apoc.node.relationship.types(n) AS value", (r) -> assertEquals(Collections.emptyList(), r.get("value")));
-        TestUtil.testCall(db, "RETURN apoc.node.relationship.types(null) AS value", (r) -> assertEquals(null, r.get("value")));
+        TestUtil.testCall(db, "RETURN apoc.node.relationship.types(null) AS value", (r) -> assertNull(r.get("value")));
     }
 
     @Test
@@ -399,8 +400,8 @@ public class NodesTest {
         db.executeTransactionally("CREATE (f:Foo) CREATE (b:Bar) CREATE (f)-[:Y]->(b) CREATE (f)-[:Y]->(b) CREATE (f)-[:X]->(b) CREATE (f)<-[:X]-(b)");
 
         TestUtil.testCall(db, "MATCH (f:Foo),(b:Bar)  RETURN apoc.node.degree(f, '<X') as in, apoc.node.degree(f, 'Y>') as out", (r) -> {
-            assertEquals(1l, r.get("in"));
-            assertEquals(2l, r.get("out"));
+            assertEquals(1L, r.get("in"));
+            assertEquals(2L, r.get("out"));
         });
 
     }
@@ -410,7 +411,7 @@ public class NodesTest {
         db.executeTransactionally("CREATE (f:Foo) CREATE (b:Bar) CREATE (f)-[:Y]->(b) CREATE (f)-[:Y]->(b) CREATE (f)-[:X]->(b) CREATE (f)<-[:X]-(b)");
 
         TestUtil.testCall(db, "MATCH (f:Foo),(b:Bar)  RETURN apoc.node.degree(f, '<X|Y') as all", (r) -> {
-            assertEquals(3l, r.get("all"));
+            assertEquals(3L, r.get("all"));
         });
 
     }
@@ -420,8 +421,8 @@ public class NodesTest {
         db.executeTransactionally("CREATE (f:Foo) CREATE (b:Bar) CREATE (f)-[:Y]->(b) CREATE (f)-[:Y]->(b) CREATE (f)-[:X]->(b) CREATE (f)<-[:X]-(b)");
 
         TestUtil.testCall(db, "MATCH (f:Foo),(b:Bar)  RETURN apoc.node.degree(f, 'X') as in, apoc.node.degree(f, 'Y') as out", (r) -> {
-            assertEquals(2l, r.get("in"));
-            assertEquals(2l, r.get("out"));
+            assertEquals(2L, r.get("in"));
+            assertEquals(2L, r.get("out"));
         });
 
     }
@@ -431,8 +432,8 @@ public class NodesTest {
         db.executeTransactionally("CREATE (f:Foo) CREATE (b:Bar) CREATE (f)-[:Y]->(b) CREATE (f)-[:X]->(b) CREATE (f)<-[:X]-(b)");
 
         TestUtil.testCall(db, "MATCH (f:Foo),(b:Bar)  RETURN apoc.node.degree(f, '<') as in, apoc.node.degree(f, '>') as out", (r) -> {
-            assertEquals(1l, r.get("in"));
-            assertEquals(2l, r.get("out"));
+            assertEquals(1L, r.get("in"));
+            assertEquals(2L, r.get("out"));
         });
 
     }
@@ -442,8 +443,8 @@ public class NodesTest {
         db.executeTransactionally("CREATE (a:Person{name:'test'}) CREATE (b:Person) CREATE (c:Person) CREATE (d:Person) CREATE (a)-[:Rel1]->(b) CREATE (a)-[:Rel1]->(c) CREATE (a)-[:Rel2]->(d) CREATE (a)-[:Rel1]->(b) CREATE (a)<-[:Rel2]-(b) CREATE (a)<-[:Rel2]-(c) CREATE (a)<-[:Rel2]-(d) CREATE (a)<-[:Rel1]-(d)");
 
         TestUtil.testCall(db, "MATCH (a:Person{name:'test'})  RETURN apoc.node.degree.in(a) as in, apoc.node.degree.out(a) as out", (r) -> {
-            assertEquals(4l, r.get("in"));
-            assertEquals(4l, r.get("out"));
+            assertEquals(4L, r.get("in"));
+            assertEquals(4L, r.get("out"));
         });
 
     }
@@ -453,10 +454,10 @@ public class NodesTest {
         db.executeTransactionally("CREATE (a:Person{name:'test'}) CREATE (b:Person) CREATE (c:Person) CREATE (d:Person) CREATE (a)-[:Rel1]->(b) CREATE (a)-[:Rel1]->(c) CREATE (a)-[:Rel2]->(d) CREATE (a)-[:Rel1]->(b) CREATE (a)<-[:Rel2]-(b) CREATE (a)<-[:Rel2]-(c) CREATE (a)<-[:Rel2]-(d) CREATE (a)<-[:Rel1]-(d)");
 
         TestUtil.testCall(db, "MATCH (a:Person{name:'test'})  RETURN apoc.node.degree.in(a, 'Rel1') as in1, apoc.node.degree.out(a, 'Rel1') as out1, apoc.node.degree.in(a, 'Rel2') as in2, apoc.node.degree.out(a, 'Rel2') as out2", (r) -> {
-            assertEquals(1l, r.get("in1"));
-            assertEquals(3l, r.get("out1"));
-            assertEquals(3l, r.get("in2"));
-            assertEquals(1l, r.get("out2"));
+            assertEquals(1L, r.get("in1"));
+            assertEquals(3L, r.get("out1"));
+            assertEquals(3L, r.get("in2"));
+            assertEquals(1L, r.get("out2"));
         });
 
     }
@@ -706,22 +707,27 @@ public class NodesTest {
 
     @Test
     public void testMergeVirtualNode() {
-        db.executeTransactionally("CREATE \n" +
-                "(p:Person {name: 'John'})-[:LIVES_IN]->(c:City{name:'London'}),\n" +
-                "(p1:Person {name: 'Mike'})-[:LIVES_IN]->(c),\n" +
-                "(p2:Person {name: 'Kate'})-[:LIVES_IN]->(c),\n" +
-                "(p3:Person {name: 'Budd'})-[:LIVES_IN]->(c),\n" +
-                "(p4:Person {name: 'Alex'})-[:LIVES_IN]->(c),\n" +
-                "(p1)-[:KNOWS]->(p),\n" +
-                "(p2)-[:KNOWS]->(p1),\n" +
-                "(p2)-[:KNOWS]->(p3),\n" +
-                "(p4)-[:KNOWS]->(p3)\n");
+        db.executeTransactionally("""
+                CREATE
+                (p:Person {name: 'John'})-[:LIVES_IN]->(c:City{name:'London'}),
+                (p1:Person {name: 'Mike'})-[:LIVES_IN]->(c),
+                (p2:Person {name: 'Kate'})-[:LIVES_IN]->(c),
+                (p3:Person {name: 'Budd'})-[:LIVES_IN]->(c),
+                (p4:Person {name: 'Alex'})-[:LIVES_IN]->(c),
+                (p1)-[:KNOWS]->(p),
+                (p2)-[:KNOWS]->(p1),
+                (p2)-[:KNOWS]->(p3),
+                (p4)-[:KNOWS]->(p3)
+                """);
 
         Set<Label> label = asSet(label("City"), label("Person"));
 
-        TestUtil.testResult(db, "MATCH (p:Person)-[:LIVES_IN]->(c:City)\n" +
-                "WITH c, c + collect(p) as subgraph\n" +
-                "CALL apoc.nodes.collapse(subgraph,{properties:'discard', mergeVirtualRels:true, countMerge: true}) yield from, rel, to return from, rel, to", null, result -> {
+        TestUtil.testResult(db, """
+                MATCH (p:Person)-[:LIVES_IN]->(c:City)
+                WITH c, c + collect(p) as subgraph
+                CALL apoc.nodes.collapse(subgraph,{properties:'discard', mergeVirtualRels:true, countMerge: true}) yield from, rel, to return from, rel, to""",
+                null,
+                result -> {
             Map<String, Object> map = result.next();
 
             assertEquals(Util.map("name","London", "count", 6), ((VirtualNode)map.get("from")).getAllProperties());
